# cable-jam

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  appsettings.json
.github/workflows/: build.yml
assets/audio/: generate_sfx.ps1
scripts/: generate-cable-jam-icon.cs
src/app/: App.cpp  App.h  Dpi.cpp  Dpi.h  WinMain.cpp  Window.cpp  Window.h
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: Geometry.h  Overlay.h  Scene.h  Timer.h  Tween.cpp  Tween.h  WinFile.cpp  WinFile.h
src/game/: GameState.cpp  GameState.h  Level.h  LevelGenerator.cpp  LevelGenerator.h  ProgressStore.cpp  ProgressStore.h
src/graphics/: ComPtr.h  D2DContext.cpp  D2DContext.h
src/resources/: ResourceIds.h  resources.rc
src/ui/: Overlays.cpp  Scenes.cpp  Ui.h
tests/scene_viewer/: SceneViewer.cpp
tests/unit/: GameLogicTests.cpp
